--- a/style.css
+++ b/style.css
@@ -1052,6 +1052,11 @@ tbody td {
   .wallet-card {
     width: 96%;
   }
+
+  .upload-image-card {
+    height: 325px;
+    width: 325px;
+  }
 }
 
 @media (min-width: 800px) and (max-width: 920px) {
